[package]
name = "pushrod-events"
version = "0.1.0"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod UI Library - Events Layer"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/pushrod-events/"
documentation = "http://docs.rs/crate/pushrod-events/"
keywords = ["sdl", "sdl2", "pushrod", "ui", "gui"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "pushrod_events"
path = "src/lib.rs"

[dependencies.sdl2]
default-features = false
features = ["ttf", "image", "unsafe_textures"]
version = "0.34.5"
